Updated documentation for memory management and optimizations